ozw-backend: add support for commands
At the moment we support adding devices and healing the network.
